fix: Gap in habit colors

--- a/src/components/HabitForm/styles.m.styl
+++ b/src/components/HabitForm/styles.m.styl
@@ -126,12 +126,13 @@
   .colors
     display flex
     flex-wrap wrap
+    gap 16px
 
     .color
       width 48px
       height 48px
       border-radius 10px
-      margin-right 16px
+      //margin-right 16px
       background var(--color)
       cursor pointer
       display flex
